objects/Partner_KPI2_PO_Details__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner KPI2 PO Details</relationshipLabel>
        <relationshipName>Partner_KPI2_PO_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_User_Name__c</fullName>
        <label>End User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_End_Date__c</fullName>
        <label>Maintenance End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Code__c</fullName>
        <label>SAP Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Partner KPI2 PO Details</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>End_User_Name__c</columns>
        <columns>Maintenance_End_Date__c</columns>
        <columns>PO_Date__c</columns>
        <columns>PO_Number__c</columns>
        <columns>Region__c</columns>
        <columns>Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>equals</operation>
            <value>Enovation Info Technology</value>
        </filters>
        <filters>
            <field>Period__c</field>
            <operation>equals</operation>
            <value>Sep/Oct/Nov 2014</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Partner KPI2 PO Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner KPI2 PO Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>